--- a/docs/ending.tex
+++ b/docs/ending.tex
@@ -3,15 +3,30 @@
 
 Stworzono modele platform oraz czujników, a także system wielu innych pakietów usprawniających testowanie i sterowanie robotem.
 
-Eksperymenty przeprowadzone na platformie pokazały, że błędy lokalizacji w modelu mogą być nawet większe, niż w rzeczywistym robocie.
-Z punktu widzenia testowania programu symulacyjnego to dobrze, gdyż program sterujący przetestowany na symulatorze na pewno poprawnie określi sterowanie
-dla robota.
-Nie da się jednoznacznie stwierdzić, jak dobrze modelowana jest sama platforma bez przeprowadzenia skomplikowanych testów.
-Dodatkowo, niewielkie zmiany parametrów modelu dynamicznego, to jest nadanie mas i inercji ogniwom, powodują inną jazdę i w szczególności inne odczyty 
-przyspieszenia w modelu jednostki inercyjnej.
+Eksperymenty przeprowadzone na modelu i platformie pokazały, że błędy lokalizacji w modelu mogą być nawet większe, niż w rzeczywistym robocie.
+Z punktu widzenia testowania programu symulacyjnego jest to przydatne, gdyż program sterujący, przetestowany na symulatorze, na pewno poprawnie określi sterowanie
+dla robota o mniejszych błędach ruchu.
+Model kinematyki posiada bardzo wiele parametrów działania, nie tylko w kwestii mas ogniw i ich momentów bezwładności, ale
+także w kwestii obsługi maszyny symulacyjnej fizyki.
+Istnieje kilka sposobów na nadawanie prędkości kątowej kołom.
+Aby znaleźć najodpowiedniejszy, należy przeprowadzić czasochłonne badania nad działaniem każdego z nich, również biorąc pod uwagę sposób działania maszyny do symulacji.
+Sama maszyna może być modyfikowana w celu lepszego zamodelowania bazy (gdyż ma otwarty kod), lub zastąpiona inną maszyną do symulacji fizyki.
 
-Pakiety pomocnicze i skrypty uruchamiające okazały się przydatne w sterowaniu platformą, jednak niektóre były nadto skomplikowane.
-Stanowią one dobrą bazę do późniejszego rozwijania modelu, w celu odpowiedniego ustawienia parametrów, aby jak najdokładniej przybliżyć jej działanie do platformy.
-Pozwalają również dokładnie przetestować budowany program sterujący w niemożliwych do zrealizowania przypadkach testowych.
+Testy pokazały również, jak wiele różnych i czasami nielogicznych zachowań występuje w modelach i robocie.
+Sama poprawna interpretacja wszystkich tych cech wykresów wymaga dogłębnego zbadania działania robota i maszyny do symulacji fizyki.
 
-Pisanie pracy pozwoliło na poznanie nowych narzędzi, w szczególności \LaTeX{}a i podobnych.
+Ponieważ model posiada uproszczone modele kół Mecanum, niektóre ich cechy (jak na przykład opór obrotowy rolek) nie mogą być zamodelowane
+lub też istnieje jakiś nietypowy sposób (na przykład nieznaczna zmiana kierunku wektora siły tarcia) na zamodelowanie takich własności.
+
+Jednostka inercyjna wykrywa własności robota, nieistniejące w modelu, na przykład drgania powstałe przy nagłej zmianie prędkości platformy.
+Próby wprowadzania takich własności do modelu mogą nie być możliwe lub też wymagać kolejnych badań, na przykład w kwestii dodania sprężystości do niektórych więzów.
+Istnieje także minimalny szum, zależny w dużym stopniu od ustawień parametrów modelu.
+
+Model skanera laserowego jest bardzo prosty w działaniu, zatem jego ewentualny rozwój nie będzie aż tak skomplikowany, jak innych czujników.
+
+Pakiety pomocnicze i skrypty uruchamiające okazały się przydatne w sterowaniu platformą, jednak niektóre były nadto skomplikowane i niepotrzebne.
+Pakiet rozdzielania sterowania platformy może być zastąpiony przez kilkukrotne wywołanie wbudowanego pakietu.
+Program do ręcznego sterowania jest nadto skomplikowany a i tak nie był używany do sterowania robotem, ani do przeprowadzania testów z rozdziału \ref{sec:tests}.
+Stanowią jednak one dobre wspomaganie do późniejszego rozwijania modelu w celu odpowiedniego ustawienia parametrów, aby jak najdokładniej przybliżyć jej działanie do platformy.
+
+
