--- a/docs/about.tex
+++ b/docs/about.tex
@@ -22,16 +22,16 @@
 
 
 \section{Zakres pracy}
-	Do realizacji calu postawionego w pracy, należy wykonać następujące czynności:
+	Do realizacji celu postawionego w pracy, należy wykonać następujące czynności:
 	\begin{enumerate}
-	\item Opracować model kinematyczny dookólnej bazy mobilnej z czterema kołami szwedzkimi.
-	\item Stworzyć model dynamiczny platformy do uruchomienia w symulatorze, zachowując wartości wszystkich parametrów rzeczywistego robota.
+	\item Opracować model kinematyki dookólnej bazy mobilnej z czterema kołami szwedzkimi.
+	\item Stworzyć model dynamiki platformy do uruchomienia w symulatorze, zachowując wartości wszystkich parametrów rzeczywistego robota.
 	Bryły składowe modelu muszą przypominać kształtem części z których składa się robot, należy im także ustawić parametry fizyczne, jak masę, moment bezwładności, materiał, itp.
 	\item Opracowanie modeli więzów dla koła, rolek oraz przegubu, aby maszyna symulacyjna poprawnie symulowała obiekt.
 	Taki model powinien na tym stanie poprawnie reagować na wirtualne siły.
 	\item Opracowanie wtyczki symulatora, sterującej modelem, odczytującej odpowiednie dane z zewnątrz i wywołującej funkcje maszyny symulacyjnej, aby modyfikować ruch modelu.
 	Na tym poziomie można dobudować zamiennik programu sterującego, jedynie do podawania prostych wartości bez odczytywania pomiarów i sterowania.
-	Porównanie z obiektem kinematycznym pozwala sprawdzić, czy model zachowuje się zgodnie z przewidywaniami.
+	Porównanie z modelem kinematyki pozwala sprawdzić, czy model zachowuje się zgodnie z przewidywaniami.
 	\item Stworzenie wtyczki symulującej enkodery, aby generowały dane, bazując na pozycjach i prędkościach kół wirtualnych.
 	\item Dodanie czujników wirtualnych, zarówno tych, mających swoje odpowiedniki w rzeczywistości, jak i również całkowicie symulacyjnych.
 	\item Stworzenie interfejsów do zmiany różnych parametrów działania modelu.
