--- a/docs/abstract.tex
+++ b/docs/abstract.tex
@@ -12,7 +12,7 @@ Rozpatrzone są wymagania i problemy przy tworzeniu każdego ze składników śr
 Na system składają się wirtualne efektory i receptory obsługujące odpowiednią maszynę symulacyjną, a także pakiety wspomagające symulację.
 Do wykonania zadania użyto programowej struktury ramowej ROS i symulatora Gazebo.
 
-W ramach pracy, stworzone zostały modele dynamiczne, oraz kinematyczne platformy.
+W ramach pracy, stworzone zostały modele dynamiki oraz kinematyki platformy.
 Stworzono modele skanerów laserowych, jednostki inercyjnej, oraz enkoderów, a także narzędzia wspomagające testowanie i uruchomienie odpowiednich składników systemu.
 
 Wykonano również szereg testów, mających na celu weryfikację działania opracowanego modelu.
