--- a/docs/bibliography.tex
+++ b/docs/bibliography.tex
@@ -89,7 +89,7 @@ Strona internetowa SICK, producenta czujników laserowych. \\
 \url{https://www.sick.com/de/en/detection-and-ranging-solutions/2d-lidar-sensors/lms1xx/lms100-10000/p/p109841}
 
 \bibitem{adis_website}
-Strona internetowa sprzedawcy czujnika inercji. \\
+Strona internetowa sprzedawcy jednostki inercyjnej. \\
 \url{https://www.digikey.com/product-detail/en/analog-devices-inc/ADIS16460AMLZ/ADIS16460AMLZ-ND/5957823}
 
 \bibitem{ode_contact}
