--- a/docs/robot.tex
+++ b/docs/robot.tex
@@ -278,7 +278,7 @@
 			Systematyczny błąd pomiarowy & $\pm$ 0,03 \si{\metre} \\
 			Przypadkowy błąd pomiaru odległości & 0,012 \si{\metre} \\
 			\end{tabular}
-			\caption{Podstawowe cechy czujnika laserowego.}
+			\caption{Podstawowe cechy skanera laserowego.}
 			\label{tab:lidar}
 		\end{table}
 		
