--- a/docs/tools.tex
+++ b/docs/tools.tex
@@ -103,7 +103,7 @@ lecz te funkcjonalności nie są potrzebne dla symulacji opisywanej platformy. N
 	
 	\begin{itemize}
 		\item Symulacja fizyki za pomocą maszyny do symulacji ODE.
-		\item Całkowanie prędkości poprzez umieszczenie obiektu kinematycznego w przestrzeni wirtualnej.
+		\item Całkowanie prędkości poprzez umieszczenie modelu kinematyki w przestrzeni wirtualnej.
 		\item Możliwość modyfikacji wektorów tarcia obiektom.
 		\item Dane o prędkościach i pozycjach wszystkich obiektów na scenie.
 		\item Symulacja skanera laserowego.
