--- a/po/main.tex
+++ b/po/main.tex
@@ -28,6 +28,8 @@
 		\tableofcontents[currentsection]
 	\end{frame}
 	
+	
+	
 	\section{Problem}
 	\begin{frame}
 		\frametitle{Platforma mobilna}
@@ -42,40 +44,44 @@
 			Platforma na kołach Mecanum
 		\end{columns}
 	\end{frame}
+	
 	\begin{frame}
-		\frametitle{Cel projektu --- opracowanie modelu symulacyjnego platformy}
+		\frametitle{Cel projektu --- opracowanie modelu i środowiska symulacyjnego platformy}
 		Do czego przydatny jest model:
 		\begin{itemize}
-			\item Pozwala bezpiecznie testować nowe oprogramowanie.
-			\item Przyspiesza implementację i testowanie.
+			\item Pozwala na bezpieczne testowanie nowego oprogramowania.
+			\item Przyspiesza implementację i testowanie programu sterującego.
 			\item Ułatwia przeprowadzanie skomplikowanych i niebezpiecznych dla robota testów.
-			\item Daje możliwość implementacji czujników niezamontowanych w urządzeniu.
+			\item Daje możliwość modelowania czujników niezamontowanych w urządzeniu.
 		\end{itemize}
 		Wymagania:
 		\begin{itemize}
-			\item Model reaguje na momenty siły i tarcie w sposób zbliżony do robota.
+			\item Model reaguje na momenty siły i siły tarcia w sposób zbliżony do robota.
 			\item Przyjmuje taką samą postać sygnałów sterujących.
 			\item Generuje dane z czujników wirtualnych, zbliżone do rzeczywistych.
 		\end{itemize}
 	\end{frame}
+	
 	\begin{frame}
 		\frametitle{Założenia}
 		\begin{itemize}
-			\item Symulacja kół musi być przybliżona ze względu na ograniczoną moc obliczeniową komputera.
+			\item Ze względu na ograniczoną moc obliczeniową komputera, modele kół muszą być przybliżone.
 			\item Robot i model poruszają się tylko po płaszczyźnie.
-			\item Odwzorowujemy kinematykę, dynamikę i tarcie.
+			\item Odwzorować należy kinematykę, dynamikę i tarcie.
 			\item Mogą występować poślizgi kół.
-			\item Symulacja obarczona jest naturalnym błędem liczb zmiennoprzecinkowych.
+			\item Symulacja obarczona jest naturalnym numerycznym błędem liczb zmiennoprzecinkowych.
 		\end{itemize}
 	\end{frame}
+
+	
 
 	\section{Platforma}
 	\begin{frame}
 		\frametitle{Budowa}
 		\centering
-		\includegraphics[width=0.4\textwidth]{graphics/base_top.png}
+		\includegraphics[width=0.4\textwidth]{graphics/base.pdf}
 		\begin{itemize}
-			\item Przegub zawiasowy łączy dwie części platformy.
+			\item Przegub o jednym stopniu swobody łączy dwie części platformy.
 			\item Koła ustawione są w kształt litery \emph{X}.
 			\item Oś rolki aktualnie znajdującej się u góry koła jest prostopadła do osi rolki kolidującej z podłożem.
 		\end{itemize}
@@ -87,26 +93,29 @@
 		\includegraphics[width=\textwidth]{graphics/wheel.pdf}
 		\begin{itemize}
 			\item Każde koło ma 12 pasywnych rolek.
-			\item Rolka jest obrócona o 45\textdegree{} względem płaszczyzny koła.
-			\item Punkt kontaktu powinien płynnie przechodzić z rolki na rolkę.
-			\item Koło pod wpływem momentu siły i tarcia podłoża generuje dwa wektory siły, zamiast jednego.
+			\item Rolka jest obrócona o 45° względem osi obrotu koła.
+			\item Punkt kontaktu rolki z podłożem powinien płynnie przechodzić z rolki na rolkę.
+			\item Koło pod wpływem momentu siły i siły tarcia o podłoże generuje wektor siły obrócony o 45° względem wektora siły standardowego koła.
 		\end{itemize}
 	\end{frame}
+	
 	\begin{frame}
-		\frametitle{Dodatkowy wektor}
+		\frametitle{Obrócony wektor}
 		\centering
 		\includegraphics[width=\textwidth]{graphics/vectors.pdf} \\
-		Standardowe koło używając tarcia przekształca prędkość kątową na liniową w płaszczyźnie obrotu.
-		Specjalne koło Mecanum ma dodatkowy wektor równoległy do osi obrotu, zatem prędkość wypadkowa jest obrócona o 45\textdegree.
+		Standardowe koło, używając tarcia, przekształca prędkość kątową na liniową w płaszczyźnie obrotu.
+		Specjalne koło Mecanum posiada pasywne rolki na obrzeżu, zatem prędkość wypadkowa jest obrócona o 45\textdegree.
 	\end{frame}
+	
 	\begin{frame}
 		\frametitle{Kierunki ruchu}
 		\centering
 		\includegraphics[width=\textwidth]{graphics/dirs.pdf} \\
-		Poprzez znoszenie się składowych prędkości, robot może poruszać się w kierunkach nieosiągalnych dla pojazdów o zwykłych kołach.
+		Poprzez znoszenie się składowych wektorów sił, robot może poruszać się w kierunkach nieosiągalnych dla pojazdów o zwykłych kołach.
 	\end{frame}
+	
 	\begin{frame}
-		\frametitle{Kinematyka}
+		\frametitle{Model kinematyki}
 		\[
 		\begin{bmatrix}
 		v_x \\
@@ -131,40 +140,85 @@
 		\includegraphics[width=0.5\textwidth]{graphics/base_dims.pdf} 
 	\end{frame}
 
+	\begin{frame}
+		\frametitle{Czujniki}
+		\begin{itemize}
+			\item Enkodery generują prędkość kątową i kąt obrotu koła.
+			\item Skanery laserowe zwracają przybliżony zarys obiektów wokół robota.
+			\item Jednostka inercji mierzy przyspieszenie liniowe i prędkość kątową platformy.
+		\end{itemize}
+	\end{frame}
+	
+	
+	
 	\section{Implementacja}
 	\begin{frame}
 		\frametitle{Modele}
 		\begin{columns}[c]
 			\column{0.4\textwidth}
-			\centering
-			\includegraphics[width=\textwidth]{graphics/model.png} \\
-			Dynamiczny model platformy.
+				\centering
+				\includegraphics[width=\textwidth]{graphics/model.png} \\
+				Model dynamiki platformy.
 			\column{0.6\textwidth}
-			Uproszczone modele dynamiki:
-			\begin{itemize}
-				\item Model dynamiczny w Gazebo.
-				\item Model dynamiczny w V-Repie.
-			\end{itemize}
-			Matematycznie dokładne modele kinematyki:
-			\begin{itemize}
-				\item Model kinematyki prostej --- koła na prędkość.
-				\item Model kinematyki odwrotnej --- prędkość na koła.
-			\end{itemize}
+				\begin{itemize}
+					\item Uproszczony model dynamiki.
+					\item Matematycznie dokładne modele kinematyki.
+					\begin{itemize}
+						\item Model kinematyki prostej --- koła na prędkość.
+						\item Model kinematyki odwrotnej --- prędkość na koła.
+					\end{itemize}
+					\item Modele czujników.
+					\begin{itemize}
+						\item Enkodery.
+						\item Skanery laserowe.
+						\item Jednostki inercji.
+					\end{itemize}
+					\item Pakiety wspomagające testowanie.
+					\begin{itemize}
+						\item Generujące dane.
+						\item Przyjmujące dane.
+						\item Filtrujące dane.
+					\end{itemize}
+				\end{itemize}
 		\end{columns}
 	\end{frame}
+	
 	\begin{frame}
-		\frametitle{Struktura projektu}
-		\centering
-		\includegraphics[width=\textwidth]{graphics/comm.pdf} 
+		\frametitle{Parametry modelu dynamiki}
+		\begin{itemize}
+			\item Sposób implementacji modelu.
+			\item Współczynniki tarcia i poślizgu kół.
+			\item Masy i momenty bezwładności ogniw.
+			\item Parametry przegubów.
+			\item Parametry silnika do symulacji fizyki.
+		\end{itemize}
+		Odpowiedni dobór parametrów pozwala na przybliżenie zachowania się modelu do platformy.
+
 	\end{frame}
+
+	\begin{frame}
+		\frametitle{Testowanie programu sterującego}
+		\centering
+		\includegraphics[width=\textwidth]{graphics/final.pdf} 
+		Sposób podłączenia programu sterującego do środowiska.
+	\end{frame}
+	
+	
+	
 	\section{Pomiary}
+	\begin{frame}
+		\frametitle{Testowanie ruchu modelu dynamiki platformy}
+		\centering
+		\includegraphics[width=\textwidth]{graphics/comparison.pdf} 
+		Konfiguracja środowiska przy przeprowadzaniu testów.
+	\end{frame}
+	
 	\begin{frame}
 		\frametitle{Sprzęt i wersje programów}
 		Eksperymenty przeprowadzono na dobrej jakości sprzęcie i możliwie najaktualniejszych wersjach programów.
 		\begin{itemize}
-			\item System operacyjny Ubuntu LTS Xenial Xerus
+			\item System operacyjny Ubuntu LTS 16.04 (Xenial Xerus)
 			\item ROS Kinetic Kame
-			\item V-Rep 3.4.0
 		\end{itemize}
 		\begin{itemize}
 			\item Intel i7-4720HQ 2.60GHz
@@ -173,49 +227,73 @@
 		\end{itemize}
 		W czasie testów użycie procesora nigdy nie wyniosło 100\%.
 	\end{frame}
+	
 	\begin{frame}
-		\frametitle{Obszar testów}
+		\frametitle{Porównanie modelu z platformą}
 		\centering
-		\includegraphics[width=0.8\textwidth]{graphics/track_1.png} \\
+		\includegraphics[width=\textwidth]{graphics/velmobil_xy.pdf} \\
 		Prosty przebieg bez zmiany orientacji platformy.
 	\end{frame}
+	
 	\begin{frame}
-		\frametitle{Powtarzalność przebiegu}
+		\frametitle{Cechy modelu przy skręcie}
 		\centering
-		\includegraphics[width=0.8\textwidth]{graphics/bag_3.png} \\
-		Robot sterowany binarnymi prędkościami kół.
+		\includegraphics[width=\textwidth]{graphics/velmobil_xy_s.pdf} \\
+		Przybliżenie fragmentu poprzedniego wykresu.
 	\end{frame}
+	
 	\begin{frame}
-		\frametitle{Badanie odometrii}
+		\frametitle{Jednostka inercyjna}
 		\centering
-		\includegraphics[width=0.7\textwidth]{graphics/reen_1.png} \\
-		Model kinematyczny porusza się na podstawie danych generowanych przez enkodery w modelu dynamicznym.
+		\includegraphics[width=\textwidth]{graphics/imu_xy.pdf} \\
+		Porównanie rzeczywistych danych z modelem.
 	\end{frame}
+	
 	\begin{frame}
-		\frametitle{Pokaz?}
-		Pokaz na żywo, bądź film.
+		\frametitle{Skaner laserowy}
+		\centering
+		\begin{columns}[c]
+			\column{0.5\textwidth}
+			\centering
+			\includegraphics[width=\textwidth]{graphics/screen_laser.png} \\
+			Symulator
+			\column{0.5\textwidth}
+			\centering
+			\includegraphics[width=\textwidth]{graphics/screen_rviz.png} \\
+			Wizualizer danych
+		\end{columns}
 	\end{frame}
+
+	
+	\begin{frame}
+		\frametitle{Pokaz}
+		Nagrany film lub pokaz na żywo.
+	\end{frame}
+ 
+ 
  
 	\section{Podsumowanie}
 	\begin{frame}
 		\frametitle{Podsumowanie}
 		\begin{itemize}
-			\item Opracowano 3 modele symulacyjne i model pomocniczy, które pozwalają na symulację dynamiki i kinematyki.
-			\item Modele mają różną budowę wewnętrzną i działają na różnych symulatorach.
-			\item Przebiegi ścieżek są wystarczająco dobrze zbliżone do siebie.
-			\item Modele generują dane z zasymulowanych czujników.
-			\item Stworzono model podłoża o zmiennym współczynniku tarcia.
-			\item Stworzono zestaw programów ułatwiających testowanie.
+			\item Opracowano modele dynamiki i kinematyki.
+			\item Opracowano zestaw pakietów ułatwiających przeprowadzanie testów i wizualizację.
+			\item Zasymulowano czujniki modeli.
+			\item Przeprowadzono testy porównujące trasy robota i modeli.
+			\begin{itemize}
+				\item Dobrano parametry modelu dynamiki.
+				\item Dobrano parametry symulowanych czujników.
+			\end{itemize}
 		\end{itemize}
 	\end{frame}
 	\begin{frame}
 		\frametitle{Perspektywy rozwoju}
 		\begin{itemize}
-			\item Porównanie działania modeli i robota przy tym samym sterowaniu.
-			\item Usprawnienie interfejsu do sterowania ręcznego.
-			\item Próba implementacji modelu czujnika laserowego.
-			\item Szczegółowa analiza modeli i określenie przyczyn rozbieżności.
-			\item Dopracowanie w modelach współczynników takich, jak masy, tarcia i inercja.
+			\item Przeprowadzenie wielokrotnych i szczegółowych testów platformy.
+			\item Szczegółowa analiza modeli i symulatora oraz określenie przyczyn rozbieżności.
+			\item Dobranie współczynników modeli w zautomatyzowany sposób.
+			\item Badania nad zmianą implementacji modelu i symulatora.
+			\item Połączenie modeli platformy i robota Velma.
 		\end{itemize}
 	\end{frame}
 	\begin{frame}
